revert spacing to fix iPhone viewing

--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -544,9 +544,10 @@ $iconWidth: 30px;
    margin-bottom: 3px;
 }
 
-.page-item-input {
-   height: 32px;
-}
+// uncomment to fix edit spacing but breaks iPhone
+// .page-item-input {
+//    height: 32px;
+// }
 
 .compartment-title,
 .compartment-input {
@@ -558,13 +559,15 @@ $iconWidth: 30px;
 //    height: 21px; // to make the height match what the input version ends up being
 // }
 
-.compartment-input {
-   height: 33px;
-}
+// uncomment to fix edit spacing but breaks iPhone
+// .compartment-input {
+//    height: 33px;
+// }
 
-.card-item-input {
-   height: 24px;
-}
+// uncomment to fix edit spacing but breaks iPhone
+// .card-item-input {
+//    height: 24px;
+// }
 
 input {
    // background-color: black;
